<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_mavlink_ctrl</name>
  <version>0.1.0</version>
  <description>ROS2 node for direct control of PX4 with ROS2 topics, using MAVSDK</description>
  <maintainer email="jarix@ssrc.tii.ae">Jari Nippula</maintainer>
  <license>BSD 3-Clause</license>

  <depend>mavsdk</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
